Add search engine verification

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="keywords" content="Bitcoin, cryptocurrency, Bitcoin SV, vps, infrastructure, virtual private server">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <meta name="google-site-verification" content="vDby1QXbMvBLjuJyb4PtJoUlVgKomSMRxd8WusXzIsc" />
+  <meta name="yandex-verification" content="1eefeaa84f156624" />
+  <meta name="msvalidate.01" content="D5DFEC99600E11EB3D74C1CD971D77D2" />
 </head>
 <body>
 <!-- Thanks to http://tholman.com/github-corners/ -->
