Bootstrap 4 replaced wells with cards

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 
 <h3>Launch a server</h3>
-<div class="well well-lg">
+<div class="card card-body">
 
 <!-- This launcher is released into the public domain under the UNLICENSE -->
 
