--- a/index.html
+++ b/index.html
@@ -196,8 +196,11 @@
     <select id="operating_system" class="control form-control">
         <option value="ubuntu-18-04">Ubuntu 18.04</option>
         <option value="ubuntu-16-04">Ubuntu 16.04</option>
+        <option value="debian-10">Debian 10</option>
         <option value="debian-9">Debian 9</option>
         <option value="fedora-28">Fedora 28</option>
+        <option value="freebsd-12">FreeBSD 12</option>
+        <option value="freebsd-11">FreeBSD 11</option>
         <option value="centos-7">CentOS 7</option>
         <option value="coreos-stable">CoreOS Stable</option>
     </select>
