Add Xitheon, Monero info

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>VPS hosting for Bitcoin, Bitcoin Cash, Bitcoin SV</title>
+  <title>VPS hosting for Bitcoin, Bitcoin Cash, Bitcoin SV, Monero</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Launch VPS servers with Bitcoin, Bitcoin Cash, and Bitcoin SV">
-  <meta name="keywords" content="Bitcoin, cryptocurrency, Bitcoin SV, vps, infrastructure, virtual private server">
+  <meta name="description" content="Launch VPS servers with Bitcoin, Bitcoin Cash, Bitcoin SV, and Monero">
+  <meta name="keywords" content="Bitcoin, cryptocurrency, Bitcoin SV, vps, infrastructure, virtual private server, xmr">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <meta name="google-site-verification" content="vDby1QXbMvBLjuJyb4PtJoUlVgKomSMRxd8WusXzIsc" />
@@ -37,7 +37,7 @@
 <td>Yes</td>
 <td>No</td>
 <td>No signup or email required.</td>
-<td>Bitcoin, Bitcoin Cash, Bitcoin SV</td>
+<td>Bitcoin, Bitcoin Cash, Bitcoin SV, Monero</td>
 </tr>
 
 <tr>
@@ -47,6 +47,15 @@
 <td>No</td>
 <td>Email, but it doesn't have to be valid.</td>
 <td>Bitcoin, Monero</td>
+</tr>
+
+<tr>
+<td><a href="https://xitheon.com/aff.php?aff=4">Xitheon</a></td>
+<td>Unknown</td>
+<td>Yes</td>
+<td>No</td>
+<td>Email</td>
+<td>Bitcoin</td>
 </tr>
 
 <tr>
