Add Cock Box Hidden Service

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <tr>
 <td><a href="https://cockbox.org/?r=2632">Cock Box</a></td>
-<td>Unknown</td>
+<td><a href="http://dwtqmjzvn2c6z2x462mmbd34ugjjrodowtul4jfbkexjuttzaqzcjyad.onion/">Cock Box Hidden Service</a></td>
 <td>No</td>
 <td>No</td>
 <td>Email, but it doesn't have to be valid.</td>
