--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
 <td>Bitcoin, Bitcoin Cash</td>
 </tr>
 
+<tr>
+<td><a href="https://njal.la/">Njalla</a></td>
+<td><a href="http://njalladnspotetti.onion/">Njalla Hidden Service</a></td>
+<td>Yes</td>
+<td>No</td>
+<td>Email, XMPP (with <a href="https://otr.cypherpunks.ca/">OTR</a>)</td>
+<td>Bitcoin, Litecoin, Monero, Zcash, DASH, Ethereum, </td>
+</tr>
+
 </table>
 
 <div class="card card-body">
