--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 <td><a href="http://njalladnspotetti.onion/">Njalla Hidden Service</a></td>
 <td>Yes</td>
 <td>No</td>
-<td>Email, XMPP (with <a href="https://otr.cypherpunks.ca/">OTR</a>)</td>
-<td>Bitcoin, Litecoin, Monero, Zcash, DASH, Ethereum, </td>
+<td>Email or XMPP (with <a href="https://otr.cypherpunks.ca/">OTR</a>) required.</td>
+<td>Bitcoin, Litecoin, Monero, Zcash, DASH, Ethereum</td>
 </tr>
 
 </table>
